[package]
name = "bootstrap-ht"
version = "0.1.0"
edition = "2021"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
description = "Bootstrap Hypothesis Testing"
license = "Apache-2.0"
categories = ["science", "mathematics"]
keywords = ["math", "statistics", "hypothesis-testing", "bootstrap"]
homepage = "https://github.com/ssoudan/bootstrap-ht"
repository = "https://github.com/ssoudan/bootstrap-ht"
documentation = "https://docs.rs/bootstrap-ht"
readme = "README.md"
exclude = [
    "/.github/*",
    "/.cargo/*",
    "/.gitignore",
]


[features]
default = []
unstable = [ "rand_distr" ]

[[bench]]
name = "ht"
harness = false
required-features = [ "unstable" ]

[dependencies]
thiserror = "1"
rand = { version = "0"}
num-traits = "0"
rand_distr = { version = "0", optional = true }

[dev-dependencies]
approx = "0"
rand_chacha = "0"
criterion = "0"
rand_distr = "0"
itertools = "0"